# Sort

./: .clang-format  CMakeLists.txt
cmake/: add_sort_algorithm.cmake  add_sort_test.cmake
include/sort/: insertion.hpp  selection.hpp
tests/: insertion_test.cpp
